fix handling of inline text attachments when display attachments inline is set to false, r=squib, bug 583419